[tool.poetry]
name = "jinja-markdown2"
version = "0.1.6"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
markdown2 = "^2.4.3"


[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
