[tool.poetry]
name = "jinja-markdown2"
version = "0.3.0"
description = "A Jinja2 extension for rendering Markdown with markdown2."
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"
keywords = ["jinja2", "markdown2"]
license = "MIT"
repository = "https://github.com/mkbabb/jinja-markdown2"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
markdown2 = "^2.4.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
