[tool.poetry]
name = "jinja-markdown2"
version = "0.4.0"
description = "A Jinja2 extension for rendering Markdown with markdown2."
authors = ["Mike Babb <mike7400@gmail.com>"]
readme = "README.md"
keywords = ["jinja2", "markdown2"]
license = "MIT"
repository = "https://github.com/mkbabb/jinja-markdown2"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
markdown2 = "^2.4.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
